...
            "state" : "translated",
            "value" : "Disclaimer"
          }
        }
      }
    },
    "Dismiss" : {
      "comment" : "A button that dismisses the current view.",
      "isCommentAutoGenerated" : true
    },
    "Dismiss onboarding hint" : {
      "comment" : "A button label that dismisses an onboarding hint.",
      "isCommentAutoGenerated" : true
...
      "isCommentAutoGenerated" : true
    },
    "Reload Resource Summary" : {
      "comment" : "Button text to reload the summary of a FHIR resource.",
      "isCommentAutoGenerated" : true
    },
    "Reset Chat" : {
      "comment" : "A button that resets a user's chat history.",
      "isCommentAutoGenerated" : true
    },
    "Resource Limit" : {
      "comment" : "A section header that lists the resource limit setting.",
      "isCommentAutoGenerated" : true,
...
      "comment" : "A section that lets the user select which resources to use.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Resources Selection"
          }
        }
      }
    },
    "Resource Settings" : {
      "comment" : "The title of a view that allows a user to configure which resources to use.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Resources Settings"
          }
        }
      }
    },
    "Run LLMs locally. Keep data inside your network." : {
      "comment" : "Subtitle for the Fog Information View.",
...
      "comment" : "The accessibility label for the settings button.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Settings"
          }
        }
      }
    },
    "SETTINGS_LLM" : {
      "comment" : "The title of the section related to the language learning model settings.",
...
      "isCommentAutoGenerated" : true
    },
    "You must allow AIHealthLiteracy to access the camera in order to be able to scan a QR code" : {
      "comment" : "A message displayed when the user has denied access to the camera.",
      "isCommentAutoGenerated" : true
    },
    "Your Health Records" : {
      "comment" : "Title of the view that lists the user's health records.",
      "isCommentAutoGenerated" : true
    }
  },
  "version" : "1.1"
}
