...
      "comment" : "A message displayed in a confirmation dialog when the user taps the \"Continue\" button in the toolbar.",
      "isCommentAutoGenerated" : true
    },
    "Do you want to end the chat and complete your participation in the study?" : {

    },
    "Done" : {
    },
    "End Chat" : {

    },
    "End Chat?" : {

    },
    "Expires" : {
      "comment" : "A toggle that allows the user to enable or disable the expiration date for the study enrollment QR code.",
      "isCommentAutoGenerated" : true
    },
    "Explanation Detail" : {
    },
    "Going back will reset your chat history." : {
      "comment" : "A confirmation dialog title that warns the user that going back will reset their chat history.",
      "isCommentAutoGenerated" : true
    },
    "HEALTH_RECORDS_SINCE" : {
...
      "comment" : "A button that, when pressed, advances to the next task in the study.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Proceed to the next task"
          }
        }
      }
    },
    "No" : {
      "comment" : "The label of a button that cancels an action.",
...
      "isCommentAutoGenerated" : true
    },
    "Select a study on the right." : {
      "comment" : "A message displayed when there is no QR code to display.",
      "isCommentAutoGenerated" : true
    },
    "Set the level of detail" : {
    },
    "SETTINGS" : {
      "comment" : "The accessibility label for the settings button.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "en" : {
...
      "comment" : "A label for a button that starts a study session.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Start Session"
          }
        }
      }
    },
    "Study" : {
      "comment" : "A label for the \"Study\" picker in the Create Study Enrollment QR Code sheet.",
...
    },
    "STUDY_COMPLETED_TITLE" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "You're All Set"
          }
        }
      }
    },
    "STUDY_QR_CODE_GEN_EXPIRATION_FOOTER" : {
      "comment" : "A footer displayed below the \"Valid for\" picker in the \"Create Enrollment QR Code\" sheet.",
...
      }
    },
    "Valid for" : {
      "comment" : "A label for the duration for which a study enrollment QR code is valid.",
      "isCommentAutoGenerated" : true
    },
    "View Instructions" : {
      "comment" : "A button that, when tapped, displays instructions for the current task.",
      "isCommentAutoGenerated" : true
    },
    "WELCOME_AREA1_DESCRIPTION" : {
      "comment" : "Description of the first area in the welcome onboarding view.",
      "isCommentAutoGenerated" : true,
...
