...

extension Study {
    /// Plainly's language study
    public static var languageStudy: Study {
        Study(
            id: "edu.stanford.plainly.languageStudy",
            title: "Language Study",
            explainer: "Welcome to the Plainly Language Study!",
            llmModel: .gpt5_5,
            ragEnabled: false,
            summarizeSingleResourcePrompt: nil,
            interpretMultipleResourcesPrompt: .languageStudySystemPrompt,
            chatTitleConfig: .studyTitle,
...
